src/features/novaPoshta/ui/NovaPoshtaButton.module.css
.novaPoshtaButton {
  display: flex;
  flex-direction: column;
  padding: 11px 40px 11px 16px;
  border: 1px solid #e2e8f0;
  border-radius: 0px;
  font-family: Inter, sans-serif;
  background-color: #fff;
  cursor: pointer;
  /* max-width: 344px; */
  position: relative;
  box-sizing: border-box;
}

.novaPoshtaButton.buttonHorizontal {
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.novaPoshtaButton img {
  width: 24px;
  height: 24px;
  margin-right: 10px;
}

.text {
  display: flex;
}

.novaPoshtaButton .angle {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 20px;
  height: 16px;
}

.logo {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.logoNoMargin {
  margin: 0;
}

.modalOverlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1000;
}

.modalHeader {
  position: relative;
  height: 80px;
  padding: 0 20px;
  border-bottom: 1px solid #e2e8f0;
  line-height: 80px;
}

.modal {
  position: relative;
  width: 80%;
  height: 80%;
  background-color: white;
  overflow: hidden;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

.modalHeader h2 {
  margin: 0;
  font-family: Inter, sans-serif;
  font-size: 20px;
  line-height: 80px;
  font-weight: 600;
}

.modalClose {
  cursor: pointer;
  font-size: 32px;
  color: #333;
  position: absolute;
  right: 0;
  top: 0;
  width: 40px;
  height: 100%;
}

.modalIframe {
  width: 100%;
  height: calc(100% - 81px);
  border: none;
}

.wrapper {
  display: flex;
  flex-direction: column;
  font-family: Inter, sans-serif;
  font-weight: 500;
}

.wrapper .text {
  font-size: 16px;
  line-height: 21px;
}

.wrapper .textDescription {
  font-size: 14px;
  font-weight: 400;
  line-height: 18px;
  color: #475569;
}

.textRow {
  display: flex;
  flex-direction: row;
}

@media screen and (max-width: 767px) {
  .modal {
    width: 100vw;
    height: 100vh;
  }

  .modalHeader {
    display: none;
  }

  .modalIframe {
    height: 100%;
  }
}

